--- a/org.eclipse.cbi.targetplatform.tests/pom.xml
+++ b/org.eclipse.cbi.targetplatform.tests/pom.xml
@@ -13,9 +13,8 @@
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-surefire-plugin</artifactId>
-        <version>${tycho-version}</version>
         <configuration>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m ${os-jvm-flags}</argLine>
+          <argLine>-Xmx1024m ${os-jvm-flags}</argLine>
           <useUIHarness>true</useUIHarness>
           <useUIThread>true</useUIThread>
           <dependencies>
