--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -1,5 +1,4 @@
-bin.includes = model/,\
-               .,\
+bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
@@ -11,7 +10,6 @@ bin.includes = model/,\
 jars.compile.order = .
 source.. = src-gen/,\
            src/,\
-           emf-gen/,\
            xtend-gen/
 output.. = bin/
 src.includes = about.html,\
