--- a/org.eclipse.cbi.targetplatform-update/pom.xml
+++ b/org.eclipse.cbi.targetplatform-update/pom.xml
@@ -2,10 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>releng.targetplatform-parent</artifactId>
+    <artifactId>org.eclipse.cbi.targetplatform-parent</artifactId>
     <groupId>org.eclipse.cbi.targetplatform</groupId>
     <version>2.1.1-SNAPSHOT</version>
-    <relativePath>../org.eclipse.cbi.targetplatform-parent</relativePath>
   </parent>
   <artifactId>org.eclipse.cbi.targetplatform-update</artifactId>
   <packaging>eclipse-repository</packaging>
