Fix classpath to better match Maven

--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -10,7 +10,7 @@ bin.includes = .,\
 source.. = src/main/java,\
            src/gen/xtext,\
            target/generated-sources/xtend
-output.. = bin/
+output.. = target/classes/
 src.includes = about.html,\
                about.ini,\
                about.mappings,\
@@ -29,4 +29,3 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      com.ibm.icu,\
                      org.eclipse.emf.ecore.xcore,\
                      org.eclipse.xtext.generator
-               
