--- a/org.eclipse.cbi.targetplatform.ide/.classpath
+++ b/org.eclipse.cbi.targetplatform.ide/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/gen/xtext"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
