--- a/org.eclipse.cbi.targetplatform.tests/.classpath
+++ b/org.eclipse.cbi.targetplatform.tests/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="target/generated-sources/xtend"/>
 	<classpathentry kind="src" path="src/gen/xtext"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
