--- a/org.eclipse.cbi.targetplatform.ui.tests/build.properties
+++ b/org.eclipse.cbi.targetplatform.ui.tests/build.properties
@@ -4,3 +4,4 @@ source.. = src/main/java/,\
 bin.includes = META-INF/,\
                .,\
                plugin.properties
+output.. = target/classes
