--- a/org.eclipse.cbi.targetplatform.ui/build.properties
+++ b/org.eclipse.cbi.targetplatform.ui/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                icons/
+output.. = target/classes
