--- a/org.eclipse.cbi.targetplatform/build.properties
+++ b/org.eclipse.cbi.targetplatform/build.properties
@@ -7,7 +7,6 @@ bin.includes = .,\
                about.mappings,\
                about.properties,\
                eclipse32.png
-jars.compile.order = .
 source.. = src-gen/,\
            src/,\
            xtend-gen/
@@ -17,3 +16,17 @@ src.includes = about.html,\
                about.mappings,\
                about.properties,\
                eclipse32.png
+additional.bundles = org.eclipse.xtext.xbase,\
+                     org.eclipse.xtext.common.types,\
+                     org.eclipse.xtext.xtext.generator,\
+                     org.eclipse.emf.codegen.ecore,\
+                     org.eclipse.emf.mwe.utils,\
+                     org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib,\
+                     org.objectweb.asm,\
+                     org.apache.commons.logging,\
+                     org.apache.log4j,\
+                     com.ibm.icu,\
+                     org.eclipse.emf.ecore.xcore,\
+                     org.eclipse.xtext.generator
+               
