--- a/org.eclipse.cbi.targetplatform.tests/build.properties
+++ b/org.eclipse.cbi.targetplatform.tests/build.properties
@@ -4,3 +4,4 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.properties
+additional.bundles = org.eclipse.jdt.core
