Use Xtext 2.11 as new minimal requirement
Use the new XtextGenerator workflow and regen.

--- a/org.eclipse.cbi.targetplatform.tests/xtend-gen/org/eclipse/cbi/targetplatform/tests/.gitignore
+++ b/org.eclipse.cbi.targetplatform.tests/xtend-gen/org/eclipse/cbi/targetplatform/tests/.gitignore
@@ -8,3 +8,5 @@
 /.TestTargetGeneration.java._trace
 /.TestTargetPlatformIndexer.java._trace
 /.TestValidation.java._trace
+/.TargetPlatformParsingTest.java._trace
+/TestTargetConversion.java
