Add files from m2e import
Signed-off-by: Mikael Barbero <mikael.barbero@eclipse-foundation.org>

--- a/org.eclipse.cbi.targetplatform/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/org.eclipse.cbi.targetplatform/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -1,7 +1,9 @@
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/java.directory=target/generated-sources/xtend
+//outlet.DEFAULT_OUTPUT.sourceFolder.target/generated-sources/xtend.ignore=false
 BuilderConfiguration.is_project_specific=true
 autobuilding=true
 eclipse.preferences.version=1
-generateGeneratedAnnotation=false
+generateGeneratedAnnotation=true
 generateSuppressWarnings=true
 generatedAnnotationComment=
 includeDateInGenerated=false
@@ -20,6 +22,6 @@ outlet.DEFAULT_OUTPUT.sourceFolder.src.directory=
 outlet.DEFAULT_OUTPUT.sourceFolder.src.ignore=
 outlet.DEFAULT_OUTPUT.sourceFolder.xtend-gen.directory=
 outlet.DEFAULT_OUTPUT.sourceFolder.xtend-gen.ignore=
-outlet.DEFAULT_OUTPUT.userOutputPerSourceFolder=
+outlet.DEFAULT_OUTPUT.userOutputPerSourceFolder=true
 targetJavaVersion=JAVA5
 useJavaCompilerCompliance=true
