--- a/org.eclipse.cbi.targetplatform.model/.settings/org.eclipse.emf.ecore.xcore.Xcore.prefs
+++ b/org.eclipse.cbi.targetplatform.model/.settings/org.eclipse.emf.ecore.xcore.Xcore.prefs
@@ -7,17 +7,19 @@ generateGeneratedAnnotation=false
 generateSuppressWarnings=true
 generatedAnnotationComment=
 includeDateInGenerated=false
-outlet.DEFAULT_OUTPUT.cleanDirectory=true
+outlet.DEFAULT_OUTPUT.cleanDirectory=false
 outlet.DEFAULT_OUTPUT.cleanupDerived=true
 outlet.DEFAULT_OUTPUT.createDirectory=true
 outlet.DEFAULT_OUTPUT.derived=true
-outlet.DEFAULT_OUTPUT.directory=./target/generated-sources/emf
+outlet.DEFAULT_OUTPUT.description=
+outlet.DEFAULT_OUTPUT.directory=target/generated-sources/emf
 outlet.DEFAULT_OUTPUT.hideLocalSyntheticVariables=true
 outlet.DEFAULT_OUTPUT.installDslAsPrimarySource=false
-outlet.DEFAULT_OUTPUT.keepLocalHistory=true
+outlet.DEFAULT_OUTPUT.keepLocalHistory=false
+outlet.DEFAULT_OUTPUT.name=DEFAULT_OUTPUT
 outlet.DEFAULT_OUTPUT.override=true
 outlet.DEFAULT_OUTPUT.sourceFolder.src.directory=
 outlet.DEFAULT_OUTPUT.sourceFolder.src.ignore=
-outlet.DEFAULT_OUTPUT.userOutputPerSourceFolder=
+outlet.DEFAULT_OUTPUT.userOutputPerSourceFolder=false
 targetJavaVersion=JAVA5
 useJavaCompilerCompliance=true
