--- a/org.eclipse.cbi.targetplatform.ui/.classpath
+++ b/org.eclipse.cbi.targetplatform.ui/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="target/generated-sources/xtend"/>
-	<classpathentry kind="src" path="src/gen/xtext"/>
+	<classpathentry kind="src" path="src/main/java/"/>
+	<classpathentry kind="src" path="src/gen/xtext/"/>
+	<classpathentry kind="src" path="target/generated-sources/xtend/"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
