--- a/org.eclipse.cbi.targetplatform.ui/plugin.xml
+++ b/org.eclipse.cbi.targetplatform.ui/plugin.xml
@@ -205,6 +205,15 @@
 			</activeWhen>
 		</handler>
 	</extension>
+	<extension point="org.eclipse.core.contenttype.contentTypes">
+		<content-type
+			base-type="org.eclipse.core.runtime.text"
+			file-extensions="targetplatform,tpd"
+			id="org.eclipse.cbi.targetplatform.TargetPlatform.contenttype"
+			name="Target Platform DSL File"
+			priority="normal">
+		</content-type>
+	</extension>
 	<!-- adding resource factories -->
 	<extension
 		point="org.eclipse.emf.ecore.extension_parser">
@@ -253,6 +262,15 @@
 			point="org.eclipse.core.resources.markers">
 		<super type="org.eclipse.xtext.ui.check.expensive"/>
 		<persistent value="true"/>
+	</extension>
+	<extension point="org.eclipse.ui.preferencePages">
+		<page
+			category="org.eclipse.cbi.targetplatform.TargetPlatform"
+			class="org.eclipse.cbi.targetplatform.ui.TargetPlatformExecutableExtensionFactory:org.eclipse.xtext.ui.validation.ValidatorPreferencePage"
+			id="org.eclipse.cbi.targetplatform.TargetPlatform.validator.preferencePage"
+			name="Errors/Warnings">
+			<keywordReference id="org.eclipse.cbi.targetplatform.ui.keyword_TargetPlatform"/>
+		</page>
 	</extension>
 	<extension point="org.eclipse.xtext.builder.participant">
 		<participant
@@ -402,12 +420,18 @@
 			class="org.eclipse.cbi.targetplatform.ui.TargetPlatformExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
 			extensions="targetplatform,tpd">
 		</viewer>
+		<contentTypeBinding
+			contentTypeId="org.eclipse.cbi.targetplatform.TargetPlatform.contenttype"
+			contentViewerId="org.eclipse.cbi.targetplatform.TargetPlatform.compare.contentViewers" />
 	</extension>
 	<extension point="org.eclipse.compare.contentMergeViewers">
 		<viewer id="org.eclipse.cbi.targetplatform.TargetPlatform.compare.contentMergeViewers"
 			class="org.eclipse.cbi.targetplatform.ui.TargetPlatformExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
 			extensions="targetplatform,tpd" label="TargetPlatform Compare">
 		</viewer>
+		<contentTypeBinding
+			contentTypeId="org.eclipse.cbi.targetplatform.TargetPlatform.contenttype"
+			contentMergeViewerId="org.eclipse.cbi.targetplatform.TargetPlatform.compare.contentMergeViewers" />
 	</extension>
 	<extension point="org.eclipse.ui.editors.documentProviders">
 		<provider id="org.eclipse.cbi.targetplatform.TargetPlatform.editors.documentProviders"
