--- a/org.eclipse.cbi.targetplatform/pom.xml
+++ b/org.eclipse.cbi.targetplatform/pom.xml
@@ -91,7 +91,7 @@
           <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
-            <version>2.9.0.201605261059</version>
+            <version>2.9.1.201705291010</version>
           </dependency>
           <dependency>
             <groupId>org.eclipse.xtext</groupId>
@@ -109,24 +109,24 @@
             <version>${xtext-version}</version>
           </dependency>
           <dependency>
-            <groupId>org.eclipse.emf</groupId>
-            <artifactId>org.eclipse.emf.ecore.xcore</artifactId>
-            <version>1.3.1</version>
-          </dependency>
-          <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext.ecore</artifactId>
-            <version>2.11.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.eclipse.emf</groupId>
-            <artifactId>org.eclipse.emf.codegen.ecore.xtext</artifactId>
-            <version>1.2.0</version>
+            <version>${xtext-version}</version>
           </dependency>
           <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>xtext-antlr-generator</artifactId>
             <version>[2.1.1, 3)</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xcore</artifactId>
+            <version>1.3.1</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.codegen.ecore.xtext</artifactId>
+            <version>1.2.0</version>
           </dependency>
         </dependencies>
       </plugin>
