--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>org.eclipse.cbi.targetplatform-parent</artifactId>
   <version>2.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  
+
   <licenses>
     <license>
       <name>Eclipse Public License v1.0</name>
@@ -30,8 +30,8 @@
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tycho-version>1.0.0</tycho-version>
-    <xtext-version>2.11.0</xtext-version>
+    <tycho-version>1.2.0</tycho-version>
+    <xtext-version>2.14.0</xtext-version>
     <os-jvm-flags/>
   </properties>
   
@@ -46,7 +46,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -61,17 +61,17 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.6</version>
+          <version>3.7.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>1.4.0</version>
+          <version>1.6.0</version>
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
@@ -130,6 +130,16 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <outputDirectory>target/generated-sources/xtend</outputDirectory>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.equinox.common</artifactId>
+              <version>3.10.0</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -213,8 +223,8 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>target-4_7-canary-oxygen</id>
+   <profile>
+      <id>target-4_8-photon</id>
       <activation>
       	<activeByDefault>false</activeByDefault>
       </activation>
@@ -229,7 +239,59 @@
                   <groupId>org.eclipse.cbi.targetplatform</groupId>
                   <artifactId>org.eclipse.cbi.targetplatform-parent</artifactId>
                   <version>2.1.1-SNAPSHOT</version>
-                  <classifier>target-platforms/testing/4.7-canary-oxygen</classifier>              
+                  <classifier>target-platforms/testing/4.8-photon</classifier>              
+                </artifact>
+              </target>
+              <resolver>p2</resolver>
+              <environments>
+                <environment>
+                  <os>linux</os>
+                  <ws>gtk</ws>
+                  <arch>x86</arch>
+                </environment>
+                <environment>
+                  <os>linux</os>
+                  <ws>gtk</ws>
+                  <arch>x86_64</arch>
+                </environment>
+                <environment>
+                  <os>win32</os>
+                  <ws>win32</ws>
+                  <arch>x86</arch>
+                </environment>
+                <environment>
+                  <os>win32</os>
+                  <ws>win32</ws>
+                  <arch>x86_64</arch>
+                </environment>
+                <environment>
+                  <os>macosx</os>
+                  <ws>cocoa</ws>
+                  <arch>x86_64</arch>
+                </environment>
+              </environments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>    
+    <profile>
+      <id>target-4_7-oxygen</id>
+      <activation>
+      	<activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>target-platform-configuration</artifactId>
+            <configuration>
+              <target>
+                <artifact>
+                  <groupId>org.eclipse.cbi.targetplatform</groupId>
+                  <artifactId>org.eclipse.cbi.targetplatform-parent</artifactId>
+                  <version>2.1.1-SNAPSHOT</version>
+                  <classifier>target-platforms/testing/4.7-oxygen</classifier>              
                 </artifact>
               </target>
               <resolver>p2</resolver>
