--- a/org.eclipse.cbi.targetplatform-feature/build.properties
+++ b/org.eclipse.cbi.targetplatform-feature/build.properties
@@ -14,4 +14,5 @@ bin.includes = epl-v10.html,\
                license.html,\
                copyright.txt,\
                about.html,\
-               eclipse32.png
+               eclipse32.png,\
+               p2.inf
