--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-packaging-plugin</artifactId>
           <version>${tycho-version}</version>
+          <dependencies>
+           <dependency>
+             <groupId>org.eclipse.tycho.extras</groupId>
+             <artifactId>tycho-buildtimestamp-jgit</artifactId>
+             <version>${tycho-version}</version>
+           </dependency>
+         </dependencies>
+         <configuration>
+           <timestampProvider>jgit</timestampProvider>
+         </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
